more wrap fix by jupsit

--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,10 @@ html, body {
     padding: 0;
 }
 
-* { overflow-wrap: anywhere }
+* {
+    overflow-wrap: anywhere;
+    box-sizing: border-box;
+}
 
 .message-img {
     background-image: url("teecord.png");
